--- a/docs/css/slides.css
+++ b/docs/css/slides.css
@@ -1,2 +1,14 @@
+.reveal pre code {
+    max-height: unset;
+    overflow:hidden;
+}
 
-/*# sourceMappingURL=slides.css.map */
+div.tip {
+    border: 1px solid orange;
+    background-color:beige;
+    padding: 50px;
+    margin: 20px 200px 20px 200px;
+    text-align: center;
+    position: absolute;
+    bottom: 50px;
+}
